--- a/styles/global.css
+++ b/styles/global.css
@@ -16,6 +16,7 @@
 
     --surface-primary: #FFFFFF;
     --surface-secondary: #FEE7D6;
+    --surface-disabled: #e7e5e4;
     --stroke-default: #D6D3D1;
     --stroke-highlight: #F3541C;
     --semantic-error: #DC2626;
@@ -37,4 +38,16 @@ h1 , h2 {
 img {
     max-width: 100%;
     height: auto;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-1 {
+    flex: 1
+}
+
+.flex2 {
+    flex: 2
 }
